@startuml

title __MAINSTAGE's Class Diagram__\n

  package Twitter {
    package Twitter.mainstage {
      class ForgotPasswordController {
          ~ resetButton : Button
          ~ backButton : Button
          ~ focusButton : Button
          ~ userTextField : TextField
          ~ securityTextField : TextField
          ~ passwordTextField : TextField
          ~ resultResetLabel : Label
          + goBack()
          + resetPassword()
      }
    }
  }
  

  package Twitter {
    package Twitter.mainstage {
      class LoginController {
          ~ loginButton : Button
          ~ signButton : Button
          ~ forgotButton : Button
          ~ focusButton : Button
          ~ usernameTextField : TextField
          ~ passwordTextField : PasswordField
          ~ connectionResultLabel : Label
          - resetFields()
          + openSignUpForm()
          + openForgotForm()
          + logIn()
      }
    }
  }
  

  package Twitter {
    package Twitter.mainstage {
      class SignupController {
          ~ createButton : Button
          ~ backButton : Button
          ~ focusButton : Button
          ~ newUserTextField : TextField
          ~ newPassTextField : TextField
          ~ newSecurityTextField : TextField
          ~ placeholderLabel : Label
          ~ resultCreationLabel : Label
          - securityQuestion : List<String>
          + initialize()
          + goBack()
          - loadSecurityQuestion()
          + createAccount()
      }
    }
  }
  

  ForgotPasswordController -up-|> MainStage
  LoginController o-- MessageHandler : handler
  SignupController -up-|> MainStage
  SignupController -up-|> Initializable
  SignupController o-- MessageHandler : handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
